# ci_to_lara_crew

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  DEVELOPER_GUIDE.md  LICENSE  LICENSE.md  README.md  app.py  formatted_code.php  pyproject.toml  report.md  setup.py
src/base_crews/: Ci2ToLara8XCrewBase.py  CiToLaraCrew.py  main.py
src/base_crews/config/: agents.yaml  tasks.yaml
src/ci_to_lara_crew/: crew.py  main.py
src/crews/: Ci2Tolara8XCrew.py  CiToLaraCrew.py
src/factories/: centralized_crew_factory.py
src/local_log/: log.py
src/middleware/: token_validator.py
src/routers/: api.py
src/schemas/: framework_migration_schema.json
src/storage/: test.json
src/validation/: migration_validator.py  validation.py
tests/: test_api.py  test_migration_validator.py
tools/cli/: key.py
