[tool.poetry]
name = "ci_to_lara_crew"
version = "0.1.0"
description = "ci-to-lara-crew using crewAI"
authors = ["Taj <tajulislamj200@gmail.com>"]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12.5"
crewai = { version = ">=0.130.0,<1.0.0", extras = ["tools"] }
uvicorn = "^0.29.0"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
decouple = "^0.0.7"
pyhumps = "3.8.0"
pytest = "^8.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.crewai]
type = "crew"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
