[tool.poetry]
name = "ci_to_lara_crew"
version = "1.0.1"
description = "CI to Laravel crew migration using CrewAI"
authors = ["Taj <tajulislamj200@gmail.com>"]

# ✅ Package both `src/` (if used for main code) and `tools/` (for CLI + plugin)
packages = [
  { include = "src" },
  { include = "tools" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12.5"
crewai = { version = ">=0.130.0,<1.0.0", extras = ["tools"] }
uvicorn = "^0.29.0"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
decouple = "^0.0.7"
pyhumps = "3.8.0"
pytest = "^8.4.0"
langchain-ollama = "^0.3.3"

[tool.poetry.scripts]
key_generate = "tools.cli.key:generate"
key_show = "tools.cli.key:show"
key_verify = "tools.cli.key:verify"
setup = "tools.cli.setup:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
cleo = "^2.1.0"

[tool.crewai]
type = "crew"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
